Fixed contrast error

--- a/Escritorio-Virtual/estilo/estilo.css
+++ b/Escritorio-Virtual/estilo/estilo.css
@@ -107,7 +107,7 @@ a:hover {
 
 /* Especificidad: 011 */
 a:active {
-    color: white;
+    color: black
 }
 
 /* Especificidad: 001,001,001,001 */
